[gd_scene load_steps=4 format=3 uid="uid://c5xvq8nix6y2x"]

[ext_resource type="Script" path="res://scripts/MainUI.gd" id="1_0hdqg"]
[ext_resource type="Texture2D" path="res://机场素材/游戏入场画面1.png" id="2_1mjkl"]
[ext_resource type="Texture2D" path="res://机场素材/游戏通关画面2.png" id="3_2nklm"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0hdqg")

[node name="StartScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartBackground" type="Sprite2D" parent="StartScreen"]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_1mjkl")

[node name="TitleLabel" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "入境检查练习"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubtitleLabel" type="Label" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "通过语音回答海关问题，练习英语口语"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="StartButton" type="Button" parent="StartScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "开始游戏"

[node name="GameScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="QuestionPanel" type="Panel" parent="GameScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="QuestionLabel" type="Label" parent="GameScreen/QuestionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -80.0
theme_override_font_sizes/font_size = 20
text = "What's the purpose of your visit?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VoiceInputArea" type="Control" parent="GameScreen/QuestionPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="FeedbackPanel" type="Panel" parent="GameScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="FeedbackLabel" type="Label" parent="GameScreen/FeedbackPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_font_sizes/font_size = 18
text = "✅ 回答正确！"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="SuccessScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SuccessBackground" type="Sprite2D" parent="SuccessScreen"]
position = Vector2(576, 324)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_2nklm")

[node name="SuccessLabel" type="Label" parent="SuccessScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "🎉 通关成功！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuccessMessage" type="Label" parent="SuccessScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "恭喜您成功通过入境检查！\n您的英语口语表现优秀！"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RestartButton" type="Button" parent="SuccessScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "再次挑战"

[node name="FailureScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="FailureBackground" type="ColorRect" parent="FailureScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.8)

[node name="FailureLabel" type="Label" parent="FailureScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
text = "❌ 检查失败"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FailureMessage" type="Label" parent="FailureScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "很遗憾，您的回答不够准确。\n请继续练习，提高英语口语水平！"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="RetryButton" type="Button" parent="FailureScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "重新开始"